--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ a {
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-list-mail {
@@ -136,6 +137,7 @@ a {
 .navigation-link-mail:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-navigation {
   display: flex;
@@ -145,8 +147,20 @@ a {
 
 .active-page {
   color: var(--button-color-accent);
+  position: relative;
 }
 
+.active-page::after {
+  position: absolute;
+  display: flex;
+  content: '';
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  margin-top: 28px;
+  
+}
 /* Герой */
 
 /* задаємо колір фону, щоб було видно заголовок */
@@ -202,6 +216,7 @@ a {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--button-color-accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Особенности */
@@ -244,7 +259,7 @@ a {
   color: var(--text-color);
 }
 
-/* Работа */
+/* Работа - Section3 */
 
 .work-section {
   padding-bottom: 94px;
@@ -263,12 +278,37 @@ a {
 
 .work-list {
   display: flex;
+
 }
 
 .work-item + .work-item {
   margin-left: 30px;
 }
 
+.work-thumb {
+  position: relative;
+}
+
+.work-thumb-title {
+  
+  position: absolute;
+  bottom: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+
+  height: 70px;
+  width: 100%;
+  font-weight: 700;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--button-hero-footter-color);
+}
 /* наша команда */
 
 .team {
@@ -339,6 +379,7 @@ a {
 
   background-color: var(--accent-color);
   fill: var(--button-hero-footter-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Секция 5 */
@@ -369,6 +410,7 @@ a {
 .client-link:focus {
   border-color: var(--accent-color);
   fill: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* футер */
@@ -430,6 +472,7 @@ a {
 .address-link-mail:hover,
 .address-link-mail:focus {
   color: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-list {
@@ -473,6 +516,7 @@ align-items: center;
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* портфолио */
@@ -507,6 +551,7 @@ align-items: center;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current-btn {
@@ -551,8 +596,37 @@ align-items: center;
     1px 0px 1px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-thumb {
+  position: relative;
+}
 
+.thumb-text {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+font-size: 18px;
+line-height: calc(28 / 18);
+letter-spacing: 0.03em;
+color: var(--button-hero-footter-color);
+background-color: rgba(33, 150, 243, 0.9);
+margin: 0;
+padding-left: 24px;
+padding-right: 24px;
+padding-top: auto;
+padding-bottom: auto;
+opacity: 0;
 
+}
+
+.thumb-text:hover {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .container-services-img {
   padding: 20px 24px;
@@ -578,3 +652,56 @@ align-items: center;
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+
+
+
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--button-hero-footter-color);
+  border-radius: 4px;
+  box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 1px rgba(0, 0, 0, 0.14),
+  3px 0px 1px rgba(0, 0, 0, 0.12);
+
+  
+
+}
+
+.btn-icon {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--button-hero-footter-color);
+
+}
+
