--- a/css/styles.css
+++ b/css/styles.css
@@ -105,12 +105,13 @@ a {
   line-height: calc(16 / 12);
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .navigation-list-mail {
@@ -132,12 +133,12 @@ a {
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation-link-mail:hover,
 .navigation-link-mail:focus {
   color: var(--accent-color);
-  fill: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .icon-navigation {
   display: flex;
@@ -152,15 +153,20 @@ a {
 
 .active-page::after {
   position: absolute;
+  left: 0;
+  bottom: 0;
   display: flex;
   content: '';
   width: 100%;
   height: 4px;
   border-radius: 4px;
   background-color: var(--accent-color);
-  margin-top: 28px;
+  
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
+
+
 /* Герой */
 
 /* задаємо колір фону, щоб було видно заголовок */
@@ -211,12 +217,13 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: var(--button-hero-footter-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--button-color-accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 /* Особенности */
@@ -370,8 +377,8 @@ a {
   justify-content: center;
   align-items: center;
   fill: var(--color-link);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 
 .team-social-link:hover,
@@ -379,7 +386,7 @@ a {
 
   background-color: var(--accent-color);
   fill: var(--button-hero-footter-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 /* Секция 5 */
@@ -404,13 +411,14 @@ a {
   box-sizing: border-box;
   border-radius: 4px;
   fill: var(--color-link);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
 .client-link:focus {
   border-color: var(--accent-color);
   fill: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 /* футер */
@@ -467,12 +475,13 @@ a {
 
 .address-link-mail {
   color: var(--footer-color-mail-tel);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link-mail:hover,
 .address-link-mail:focus {
   color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .footer-social-list {
@@ -510,13 +519,14 @@ align-items: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   fill: var(--button-hero-footter-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 /* портфолио */
@@ -543,6 +553,7 @@ align-items: center;
   border-radius: 4px;
   cursor: pointer;
   color: var(--title-text-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filtres-btn:hover,
@@ -551,7 +562,7 @@ align-items: center;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .current-btn {
@@ -591,41 +602,50 @@ align-items: center;
 }
 
 .portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-link:focus,
+{
   box-shadow: 6px 1px 4px rgba(0, 0, 0, 0.16), 4px 0px 4px rgba(0, 0, 0, 0.06),
     1px 0px 1px rgba(0, 0, 0, 0.12);
+
 }
 
+/* ------------Overlay---------- */
+
+.portfolio-link:focus .portfolio-overlay,
+.portfolio-link:hover .portfolio-overlay {
+  opacity: 1;
+  transform: translateY(0);
+}
 .portfolio-thumb {
   position: relative;
+  overflow: hidden;
 }
-
-.thumb-text {
+.portfolio-overlay {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-font-size: 18px;
-line-height: calc(28 / 18);
-letter-spacing: 0.03em;
-color: var(--button-hero-footter-color);
-background-color: rgba(33, 150, 243, 0.9);
-margin: 0;
-padding-left: 24px;
-padding-right: 24px;
-padding-top: auto;
-padding-bottom: auto;
-opacity: 0;
+  background-color: rgba(33, 150, 243, 0.9);
 
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-description {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  color: var(--button-hero-footter-color);
 }
 
-.thumb-text:hover {
-  opacity: 1;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+/* ---------------End overlay---------- */
+
+.services-img {
+  display: block;
 }
 
 .container-services-img {
@@ -653,6 +673,9 @@ opacity: 0;
   color: var(--text-color);
 }
 
+
+/* Модальное окно */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -661,14 +684,15 @@ opacity: 0;
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
-
+visibility: visible;
+opacity: 1;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms linear;
 }
 
 .backdrop.is-hidden {
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
-
-
 
 }
 
@@ -676,16 +700,22 @@ opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   min-width: 528px;
   min-height: 581px;
   background-color: var(--button-hero-footter-color);
   border-radius: 4px;
+  opacity: 1;
   box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 1px rgba(0, 0, 0, 0.14),
   3px 0px 1px rgba(0, 0, 0, 0.12);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opasity 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
   
+}
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.5);
+  opacity: 0;
 }
 
 .btn-icon {
