--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,6 @@ a {
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--accent-color);
-  
 }
 
 .navigation-list-mail {
@@ -134,11 +133,12 @@ a {
   letter-spacing: 0.02em;
   color: var(--text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .navigation-link-mail:hover,
 .navigation-link-mail:focus {
   color: var(--accent-color);
-  
+  fill: var(--accent-color);
 }
 .icon-navigation {
   display: flex;
@@ -154,7 +154,7 @@ a {
 .active-page::after {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   display: flex;
   content: '';
   width: 100%;
@@ -162,11 +162,9 @@ a {
   border-radius: 4px;
   background-color: var(--accent-color);
   
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
-
-
 /* Герой */
 
 /* задаємо колір фону, щоб було видно заголовок */
@@ -223,7 +221,6 @@ a {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--button-color-accent);
-  
 }
 
 /* Особенности */
@@ -266,7 +263,7 @@ a {
   color: var(--text-color);
 }
 
-/* Работа - Section3 */
+/* Работа */
 
 .work-section {
   padding-bottom: 94px;
@@ -285,7 +282,6 @@ a {
 
 .work-list {
   display: flex;
-
 }
 
 .work-item + .work-item {
@@ -316,6 +312,8 @@ a {
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--button-hero-footter-color);
 }
+
+
 /* наша команда */
 
 .team {
@@ -378,7 +376,9 @@ a {
   align-items: center;
   fill: var(--color-link);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
 
 
 .team-social-link:hover,
@@ -386,7 +386,6 @@ a {
 
   background-color: var(--accent-color);
   fill: var(--button-hero-footter-color);
-  
 }
 
 /* Секция 5 */
@@ -412,13 +411,13 @@ a {
   border-radius: 4px;
   fill: var(--color-link);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .client-link:hover,
 .client-link:focus {
   border-color: var(--accent-color);
   fill: var(--accent-color);
-  
 }
 
 /* футер */
@@ -481,7 +480,6 @@ a {
 .address-link-mail:hover,
 .address-link-mail:focus {
   color: var(--accent-color);
-  
 }
 
 .footer-social-list {
@@ -521,12 +519,12 @@ align-items: center;
   fill: var(--button-hero-footter-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
-  
 }
 
 /* портфолио */
@@ -554,6 +552,7 @@ align-items: center;
   cursor: pointer;
   color: var(--title-text-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .filtres-btn:hover,
@@ -562,7 +561,6 @@ align-items: center;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accent-color);
-  
 }
 
 .current-btn {
@@ -602,11 +600,9 @@ align-items: center;
 }
 
 .portfolio-link:hover,
-.portfolio-link:focus,
-{
+.portfolio-link:focus {
   box-shadow: 6px 1px 4px rgba(0, 0, 0, 0.16), 4px 0px 4px rgba(0, 0, 0, 0.06),
     1px 0px 1px rgba(0, 0, 0, 0.12);
-
 }
 
 /* ------------Overlay---------- */
@@ -616,6 +612,7 @@ align-items: center;
   opacity: 1;
   transform: translateY(0);
 }
+
 .portfolio-thumb {
   position: relative;
   overflow: hidden;
@@ -631,7 +628,7 @@ align-items: center;
   opacity: 0;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-description {
   font-size: 18px;
@@ -640,7 +637,6 @@ align-items: center;
   padding: 63px 24px;
   color: var(--button-hero-footter-color);
 }
-
 
 /* ---------------End overlay---------- */
 
@@ -672,7 +668,6 @@ align-items: center;
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
-
 
 /* Модальное окно */
 
@@ -708,7 +703,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms linear;
   opacity: 1;
   box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 1px rgba(0, 0, 0, 0.14),
   3px 0px 1px rgba(0, 0, 0, 0.12);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opasity 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
   
 }
@@ -734,4 +729,3 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms linear;
   background-color: var(--button-hero-footter-color);
 
 }
-
