--- a/css/styles.css
+++ b/css/styles.css
@@ -551,7 +551,7 @@ align-items: center;
   border-radius: 4px;
   cursor: pointer;
   color: var(--title-text-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -603,14 +603,23 @@ align-items: center;
 .portfolio-link:focus {
   box-shadow: 6px 1px 4px rgba(0, 0, 0, 0.16), 4px 0px 4px rgba(0, 0, 0, 0.06),
     1px 0px 1px rgba(0, 0, 0, 0.12);
+    opacity: 1;
+  transform: translateY(0);
 }
 
 /* ------------Overlay---------- */
 
 .portfolio-link:focus .portfolio-overlay,
 .portfolio-link:hover .portfolio-overlay {
+  
   opacity: 1;
   transform: translateY(0);
+  transition: 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 
 .portfolio-thumb {
@@ -626,7 +635,6 @@ align-items: center;
   background-color: rgba(33, 150, 243, 0.9);
 
   opacity: 0;
-  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
